<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.droidfactory.skp.realmsamples.view.MainActivity">

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_name_label" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_label_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_age_label" />

        <EditText
            android:id="@+id/edit_text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_age_hint"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:onClick="saveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_save" />

    <CheckBox
        android:id="@+id/check_box_pref"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="updatePref"
        android:text="@string/str_check_box_pref"/>

    <Button
        android:id="@+id/btn_movie_service_call"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="callMovieListScreen"
        android:text="@string/str_test_service_calls"/>
</LinearLayout>
